--- a/.github/workflows/release-build-upload.yml
+++ b/.github/workflows/release-build-upload.yml
@@ -60,10 +60,10 @@ jobs:
           name: m3u8d_linux_x86_cli-${{ github.ref_name }}
           path: bin/m3u8d_linux_386_cli
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-      - name: upload release linux_x64_cli
+      - name: upload release m3u8d_linux_x64_cli
         uses: Guerra24/upload-to-release@v1
         with:
-          name: linux_x64_cli-${{ github.ref_name }}
+          name: m3u8d_linux_x64_cli-${{ github.ref_name }}
           path: bin/m3u8d_linux_amd64_cli
           repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: upload release m3u8d_linux_arm_cli
