--- a/.github/workflows/push-build-check.yml
+++ b/.github/workflows/push-build-check.yml
@@ -46,10 +46,13 @@ jobs:
         with:
           version: Qt5.15.7-Windows-x86_64-MinGW8.1.0-staticFull-20221104
       - name: Setup Go environment
-        uses: actions/setup-go@v3.2.1
+        uses: actions/setup-go@v5
         with:
-          # The Go version to download (if necessary) and use. Supports semver spec and ranges.
-          go-version: 1.18 # optional
+            go-version: '1.18'
+            cache-dependency-path: |
+             ./go.sum
+             ./go.sum
+             
       - name: build
         run: |
           go mod tidy
@@ -65,10 +68,13 @@ jobs:
         with:
           version: Qt6.7.2-macOS-Universal-AppleClang15.0.0-noFramework-20240621
       - name: Setup Go environment
-        uses: actions/setup-go@v3.2.1
+        uses: actions/setup-go@v5
         with:
-          # The Go version to download (if necessary) and use. Supports semver spec and ranges.
-          go-version: 1.18 # optional
+            go-version: '1.18'
+            cache-dependency-path: |
+             ./go.sum
+             ./go.sum
+             
       - name: build
         run: |
           set -x
@@ -93,10 +99,13 @@ jobs:
         with:
           version: Qt6.7.2-macOS-Universal-AppleClang15.0.0-noFramework-20240621
       - name: Setup Go environment
-        uses: actions/setup-go@v3.2.1
+        uses: actions/setup-go@v5
         with:
-          # The Go version to download (if necessary) and use. Supports semver spec and ranges.
-          go-version: 1.18 # optional
+            go-version: '1.18'
+            cache-dependency-path: |
+             ./go.sum
+             ./go.sum
+             
       - name: build
         run: |
           set -x
