--- a/.github/workflows/release-build-upload.yml
+++ b/.github/workflows/release-build-upload.yml
@@ -23,10 +23,13 @@ jobs:
         with:
           version: Qt5.6.3-Windows-x86-MinGW4.9.4-staticFull-20200104
       - name: Setup Go environment
-        uses: actions/setup-go@v3.2.1
+        uses: actions/setup-go@v5
         with:
-          # The Go version to download (if necessary) and use. Supports semver spec and ranges.
-          go-version: 1.18 # optional
+            go-version: '1.18'
+            cache-dependency-path: |
+             ./go.sum
+             ./go.sum
+             
       - name: build
         run: |
           go mod tidy
@@ -108,10 +111,13 @@ jobs:
         with:
           version: Qt5.15.7-Windows-x86_64-MinGW8.1.0-staticFull-20221104
       - name: Setup Go environment
-        uses: actions/setup-go@v3.2.1
+        uses: actions/setup-go@v5
         with:
-          # The Go version to download (if necessary) and use. Supports semver spec and ranges.
-          go-version: 1.18 # optional
+            go-version: '1.18'
+            cache-dependency-path: |
+             ./go.sum
+             ./go.sum
+             
       - name: build
         run: |
           go mod tidy
@@ -134,10 +140,13 @@ jobs:
         with:
           version: Qt6.7.2-macOS-Universal-AppleClang15.0.0-noFramework-20240621
       - name: Setup Go environment
-        uses: actions/setup-go@v3.2.1
+        uses: actions/setup-go@v5
         with:
-          # The Go version to download (if necessary) and use. Supports semver spec and ranges.
-          go-version: 1.18 # optional
+            go-version: '1.18'
+            cache-dependency-path: |
+             ./go.sum
+             ./go.sum
+             
       - name: build
         run: |
           set -x
@@ -169,10 +178,13 @@ jobs:
         with:
           version: Qt6.7.2-macOS-Universal-AppleClang15.0.0-noFramework-20240621
       - name: Setup Go environment
-        uses: actions/setup-go@v3.2.1
+        uses: actions/setup-go@v5
         with:
-          # The Go version to download (if necessary) and use. Supports semver spec and ranges.
-          go-version: 1.18 # optional
+            go-version: '1.18'
+            cache-dependency-path: |
+             ./go.sum
+             ./go.sum
+             
       - name: build
         run: |
           set -x
